# XuiLib

./: .clang-format  BUILD.gn  README.md
include/xui/: xuilib.h
include/xui/gragh/: color.h  image.h  point.h  rect.h  size.h
include/xui/renderer/: renderer.h
include/xui/utility/: app_util.h  string.h
include/xui/window/: child_window.h  message.h  root_window.h  window.h
samples/: BUILD.gn
samples/helloworld/: BUILD.gn  child.cc  child.h  grandchild.cc  grandchild.h  main.cc  main.mm  main_window.cc  main_window.h
src/: BUILD.gn
src/renderer/: gdi_renderer_win.cc  gdi_renderer_win.h
src/utility/: app_util_mac.mm  app_util_win.cc  graph_util_win.cc  graph_util_win.h
src/window/: child_window.cc  native_window_base_win.cc  native_window_base_win.h  native_window_mac.h  native_window_mac.mm  native_window_win.cc  native_window_win.h  ns_native_window_mac.h  ns_native_window_mac.m  ns_native_window_mac.mm  root_window.cc  root_window_mac.cc  root_window_win.cc  thunk_win.h  tls_win.cc  tls_win.h  window.cc
