config("xuilib_public_config") {
  include_dirs = [ "../include" ]
}

static_library("xuilib") {
  sources = [
    "../include/xui/window/root_window.h",
    "../include/xui/xuilib.h",
  ]

  if (is_win) {
    sources += [
      "window/native_window_win.cc",
      "window/native_window_win.h",
      "window/root_window_win.cc",
      "window/thunk_win.h",
      "window/tls_win.cc",
      "window/tls_win.h",
    ]
  }

  if (is_mac) {
    sources += [
      "window/native_window_mac.h",
      "window/native_window_mac.mm",
      "window/ns_native_window_mac.h",
      "window/ns_native_window_mac.m",
      "window/root_window_mac.cc",
    ]
  }

  public_configs = [ ":xuilib_public_config" ]
}
